<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDeckFragment">

    <TextView
        android:id="@+id/card_count_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_count_text_view"
        android:id="@+id/add_card_relative_layout"
        android:layout_marginHorizontal="5dp">

        <AutoCompleteTextView
            android:id="@+id/add_card_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/add_card_button"
            android:background="@color/white"
            android:completionThreshold="3"
            android:dropDownHeight="400dp"
            android:layout_centerVertical="true"
            tools:ignore="LabelFor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/add_card_button"
            android:textSize="12sp"
            android:id="@+id/add_card_button"/>

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="@string/add_deck_hint"
        android:id="@+id/add_deck_edit_text"
        android:inputType="textMultiLine"
        android:layout_margin="10dp"
        android:gravity="top"
        android:background="@color/white"
        android:layout_below="@id/add_card_relative_layout"
        android:layout_above="@id/submit_deck"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/submit_deck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_deck_button"
        android:layout_marginHorizontal="20dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>